# backend_chatbot

./: .env.example  .gitignore  database.md  knowledge.md  pyproject.toml  rules.md  system_prompt.md  trend_context.md
api/: index.py
app/: __init__.py  main.py
app/controllers/: __init__.py  chat_controller.py  iot_controller.py
app/core/: config.py  dependencies.py
app/models/: chat.py  iot.py
app/routes/: chat.py  iot.py
app/services/: chat_service.py  llm_service.py  retrieval_service.py  supabase_service.py
app/utils/: prompt_loader.py  text_processing.py
scripts/: ingest.py
